Allow users to change name of signed/encrypted file on name conflict

This happens after the sign/encrypt operation is finished except for
writing the result to the final destination. This way we do not defer
the start of the operation. And we need to check for name conflicts
anyway immediately before doing the final write.

GnuPG-bug-id: 6372