src/crypto/signencrypttask.cpp
@@ -491,6 +491,8 @@ void SignEncryptTask::doStart()
     if (!d->output) {
         d->output = Output::createFromFile(d->outputFileName, d->m_overwritePolicy);
     }
+    // release grab on policy, so that output can infer multiple outputs from use count > 1
+    d->m_overwritePolicy.reset();
 
     const auto proto = protocol();
 #if QGPGME_SUPPORTS_ARCHIVE_JOBS
